hphp/hack/test/typecheck/is_expression/callable.php.exp
File "callable.php", line 6, characters 13-33:
The "is" operator cannot be used with a function (Typing[4195])
