hphp/hack/test/typecheck/is_expression/callable.php
<?hh

function g(int $x): void {}

function f(mixed $x, bool $b): void {
  if ($x is (function(int): ?int)) {
    g($x);
  }
}
